; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pgsql.c_fill_expect.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pgsql.c_fill_expect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.debug_expect = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.debug_expect*, i32)* @fill_expect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_expect(%struct.debug_expect* %0, i32 %1) #0 {
  %3 = alloca %struct.debug_expect*, align 8
  %4 = alloca i32, align 4
  store %struct.debug_expect* %0, %struct.debug_expect** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %6 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %5, i32 0, i32 10
  store i64 0, i64* %6, align 8
  %7 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %8 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %7, i32 0, i32 9
  store i64 0, i64* %8, align 8
  %9 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %10 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %9, i32 0, i32 0
  store i32 -1, i32* %10, align 8
  %11 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %12 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %11, i32 0, i32 1
  store i32 -1, i32* %12, align 4
  %13 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %14 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %13, i32 0, i32 2
  store i32 -1, i32* %14, align 8
  %15 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %16 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %15, i32 0, i32 3
  store i32 -1, i32* %16, align 4
  %17 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %18 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %17, i32 0, i32 4
  store i32 -1, i32* %18, align 8
  %19 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %20 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %19, i32 0, i32 5
  store i32 -1, i32* %20, align 4
  %21 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %22 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %21, i32 0, i32 6
  store i32 -1, i32* %22, align 8
  %23 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %24 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %23, i32 0, i32 7
  store i32 -1, i32* %24, align 4
  %25 = load %struct.debug_expect*, %struct.debug_expect** %3, align 8
  %26 = getelementptr inbounds %struct.debug_expect, %struct.debug_expect* %25, i32 0, i32 8
  store i32 -1, i32* %26, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
